--- a/src/Services/Movies/Movies.API/appsettings.json
+++ b/src/Services/Movies/Movies.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "Key": "system null key",
+    "IdentityAPIAddress": "https://localhost:10000"
+  }
 }
