--- a/src/Services/Identifies/IdentityServer/appsettings.json
+++ b/src/Services/Identifies/IdentityServer/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Database": "Server=(localdb)\\mssqllocaldb;Database=IdentityServerDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "ApiSettings": {
+    "MoviesAPIAddress": "https://localhost:7000"
   }
 }
