--- a/src/Services/Movies/Movies.API/appsettings.json
+++ b/src/Services/Movies/Movies.API/appsettings.json
@@ -7,7 +7,11 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "Key": "system null key",
-    "IdentityAPIAddress": "https://localhost:10000"
+    "IdentityAPIAddress": "https://localhost:10000",
+    "ClientId": "client_moviesapi",
+    "ClientName": "Movies API",
+    "Key": "client_secrets",
+    "Scope": "moviesapi",
+    "ScopeName": "Movies API" 
   }
 }
