--- a/src/Services/Identifies/IdentityServer/appsettings.json
+++ b/src/Services/Identifies/IdentityServer/appsettings.json
@@ -10,6 +10,7 @@
     "Database": "Server=(localdb)\\mssqllocaldb;Database=IdentityServerDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "ApiSettings": {
-    "MoviesAPIAddress": "https://localhost:7000"
+    "MoviesAPIAddress": "https://localhost:7000",
+    "WebUIAddress": "https://localhost:9000"
   }
 }
